Enable status message

--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -553,8 +553,9 @@
   },
   "StatusMessage": {
     "title": "Indisponibilidade do Tempo Real",
-    "explanation": "Existe uma indisponibilidade temporária na consulta do tempo real. Estamos a trabalhar para resolver a situação rapidamente.",
-    "solution": "Agradecemos a sua compreensão."
+    "explanation": "Devido a uma atualização planeada dos sistemas tecnológicos, o tempo real da Carris Metropolitana poderá estar temporariamente indisponível em determinados momentos. Prevemos voltar à normalidade no final do dia 14 de Abril (Domingo).",
+    "solution": "Agradecemos a sua compreensão.",
+    "more_info": "Saber Mais ›"
   },
   "FrontendFooter": {
     "contacts": {
