--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -552,7 +552,7 @@
     }
   },
   "StatusMessage": {
-    "title": "Indisponibilidade do Tempo Real",
+    "title": "Instabilidade do Tempo Real",
     "explanation": "Devido a uma atualização planeada dos sistemas tecnológicos, o tempo real da Carris Metropolitana poderá estar temporariamente indisponível em determinados momentos. Prevemos voltar à normalidade no final do dia 14 de Abril (Domingo).",
     "solution": "Agradecemos a sua compreensão.",
     "more_info": "Saber Mais ›"
