--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -41,6 +41,24 @@
 			"alt": "Français"
 		}
 	},
+	"FrontendFooter": {
+    "primary_links": {
+			"about": "Sobre a Carris Metropolitana",
+			"opendata": "Dados Abertos",
+			"status": "Estado"
+    },
+    "secondary_links": {
+			"conditions": "Condições Gerais de Transporte",
+			"privacy": "Política de Privacidade",
+			"cookies": "Política de Cookies",
+			"legal": "Aviso Legal"
+    },
+    "copyright": "© Carris Metropolitana {year} - Todos os direitos reservados"
+  },
+	"FrontendFooterDebug":{
+		"enabled": "Desligar Debug",
+    "disabled": "Ligar Debug"
+	},
 	"FrontendHomepageSchedules": {
 		"section_heading":"Horários",
 		"nav_items": {
@@ -626,20 +644,7 @@
     "solution": "Agradecemos a sua compreensão.",
     "more_info": "Saber Mais ›"
   },
-  "FrontendFooter": {
-    "contacts": {
-      "info_line": {
-        "number": "210 418 800",
-        "description": "Linha informativa Carris Metropolitana",
-        "disclaimer": "Chamada Rede Fixa Nacional"
-      },
-      "help_line": {
-        "number": "210 410 400",
-        "description": "Linha de apoio ao passageiro",
-        "disclaimer": "Chamada Rede Fixa Nacional"
-      }
-    }
-  },
+
   "FrontendFooterLogo": {
     "contacts": {
       "info_line": {
@@ -837,10 +842,6 @@
     "label": "Procurar paragens por nome, código, localização...",
     "placeholder": "Procurar paragens por nome, código, localização...",
     "no_results": "Nenhuma Paragem Encontrada"
-  },
-  "DebugToggle": {
-    "enabled": "Disable Debug",
-    "disabled": "Enable Debug"
   },
   "FrontendStopsTimetableFeedback": {
     "message": "A estimativa está correta?",
