--- a/nextjs/translations/pt.json
+++ b/nextjs/translations/pt.json
@@ -14,7 +14,7 @@
 		"flyers": "O Meu Livro de Horários",
 		"tarifs": "Tarifas",
 		"tickets": "Bilhetes de Bordo",
-		"navegante": "Sistema navegante®",
+		"navegante": "Passe navegante®",
 		"stores": "Lojas e Rede de Agentes",
 		"help": "Apoio ao Cliente",
 		"faq": "Perguntas Frequentes",
