--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -246,5 +246,10 @@
   },
   "common":{
     "back": "Voltar"
+  },
+  "planner":{
+    "our_partners": "Os nossos parceiros",
+    "our_partners_description": "Porque os nossos dados são abertos, existem várias aplicações que oferecem experiências personalizadas para melhorar o seu dia-a-dia nos transportes.",
+    "github_disclaimer": "Edite esta página no Github se pretende incluir a sua aplicação. A ordem é randomizada. Apenas são permitidas entradas que disponibilizem simultaneamente horários planeados e em tempo real ou posição de veículos."
   }
 }
