--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -258,6 +258,14 @@
     "expand_filters": "Expandir Filtros",
     "collapse_filters": "Esconder Filtros",
     "search_by": "Pesquisar por nome, número...",
-    "found_x_lines": "Encontradas {count} linhas"
+    "found_x_lines": "Encontradas {count} linhas",
+    "no_favorites": "Não tem linhas favoritas"
+  },
+  "line":{
+    "today": "Hoje",
+    "tomorrow": "Amanhã",
+    "pick_path": "Escolha um percurso/destino...",
+    "service_alerts": "Alertas de Serviço",
+    "x_vehicles_active": "{count, plural, =0 {Sem veículos ativos} one {# veículo ativo} other {# veículos ativos}}"
   }
 }
