--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -1,17 +1,22 @@
 {
 	"AnalyticsConsentPopup": {
-    "title": "Respeitamos a sua Privacidade",
-    "text": "Com o objetivo de melhorar a performance, os conteúdos e a segurança deste site, a TML pretende recorrer à utilização de cookies ou tecnologias similares.",
-    "privacy_policy": "Consultar Política de Cookies",
-    "accept": "OK",
-    "refuse": "Não, obrigado"
-  },
+		"title": "Respeitamos a sua Privacidade",
+		"text": "Com o objetivo de melhorar a performance, os conteúdos e a segurança deste site, a TML pretende recorrer à utilização de cookies ou tecnologias similares.",
+		"privacy_policy": "Consultar Política de Cookies",
+		"accept": "OK",
+		"refuse": "Não, obrigado"
+	},
 	"AppError": {
-    "title": "Ocorreu um erro inesperado",
-    "subtitle": "Fomos notificados e iremos corrigir em breve. Obrigado pela sua compreensão.",
-    "retry": "Nova tentativa em {value} segundos",
-    "goto_home": "Voltar à página principal"
-  },
+		"title": "Ocorreu um erro inesperado",
+		"subtitle": "Fomos notificados e iremos corrigir em breve. Obrigado pela sua compreensão.",
+		"retry": "Nova tentativa em {value} segundos",
+		"goto_home": "Voltar à página principal"
+	},
+	"PlannerPage":{
+		"heading": "Os nossos parceiros",
+		"subheading": "Porque os nossos dados são abertos, existem várias aplicações que oferecem experiências personalizadas para melhorar o seu dia-a-dia nos transportes.",
+		"disclaimer": "Edite esta página no Github se pretende incluir a sua aplicação. A ordem é randomizada. Apenas são permitidas entradas que disponibilizem simultaneamente horários planeados e em tempo real ou posição de veículos."
+	},
 	"HeaderLogo": {
 		"logo": {
 			"alt": "Carris Metropolitana"
@@ -246,11 +251,6 @@
   },
   "common":{
     "back": "Voltar"
-  },
-  "planner":{
-    "our_partners": "Os nossos parceiros",
-    "our_partners_description": "Porque os nossos dados são abertos, existem várias aplicações que oferecem experiências personalizadas para melhorar o seu dia-a-dia nos transportes.",
-    "github_disclaimer": "Edite esta página no Github se pretende incluir a sua aplicação. A ordem é randomizada. Apenas são permitidas entradas que disponibilizem simultaneamente horários planeados e em tempo real ou posição de veículos."
   },
   "lines":{
     "all_lines": "Todas as Linhas",
