--- a/frontend/translations/pt.json
+++ b/frontend/translations/pt.json
@@ -272,9 +272,13 @@
     "x_vehicles_active": "{count, plural, =0 {Sem veículos a circular} one { veículo em circulação} other { veículos em circulação}}",
     "from_until": "Entre {start} e {end}",
     "route_explainer": "O que é o percurso/destino de uma linha?",
-    "next_buses": "Próximas circulações"
+    "next_buses": "Próximas circulações",
+		"schedules": "Horários",
+		"stop_info": "Sobre a Paragem",
+		"scheduled_times": "Horários Planeados"
+
   },
-	"schedule_drawer":{
+	"schedule":{
 		"hours": "Horas",
 		"minutes": "Minutos",
 		"no_data": "Sem horários disponíveis"
