Fixed localization for pt-PT

--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -25,6 +25,12 @@
 	"FaqTopic": {
 		"label": "Tópico"
 	},
+	"FeaturedSectionMetrics": {
+		"total_today": {
+			"label": "Passageiros transportados hoje",
+			"value": "{value, number}"
+		}
+	},
 	"HeaderLogo": {
 		"logo": {
 			"alt": "Carris Metropolitana"
