--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -33,6 +33,10 @@
 		"yesterday": {
 			"label": "passageiros transportados ontem",
 			"value": "{value, number}"
+		},
+		"popover": {
+			"text": "Número de passageiros transportados atualizados a cada 60 minutos.",
+			"link": "Explorar Dados Abertos"
 		}
 	},
 	"HeaderLogo": {
