--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -67,7 +67,10 @@
 		"desks_open": "{count, plural, =0 {Nenhum posto aberto} =1 {1 posto aberto} other {# postos abertos}}",
 		"expected_wait_time": "{count, plural, =0 {Atendimento imediato} =1 {Atendimento em aprox. 1 min} other {Atendimento em aprox. # min}}"
 	},
-	"FeaturedSectionMetricDemand": {
+	"HomeMetricsSection": {
+		"heading": "Dados em Tempo Real"
+	},
+	"HomeMetricsSectionDemand": {
 		"today": {
 			"label": "passageiros transportados hoje",
 			"value": "{value, number}"
