--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -28,44 +28,60 @@
 	"FaqTopic": {
 		"label": "Tópico"
 	},
-	"StoresPage":{
-		"heading": "Lojas e Rede de Agentes",
-		"subheading":"Disponíveis para os nossos passageiros, os Espaços navegante® Carris Metropolitana estão dedicados a prestar informações sobre a rede e bilhética Carris Metropolitana, possibilitando o esclarecimento de dúvidas, a emissão de cartões navegante® e a adesão a perfis e descontos. É possível também efetuar o carregamento de títulos nos pontos de atendimento PayShop® da rede de agentes navegante®.",
-		"external_link": "Rede de agentes navegante®",
-		"grouped_list": {
-			"label": "Município"
-		}
-	},
-	"StoresStoreItem": {
-		"schedules": {
-			"label": "Horário",
-			"from": "De",
-			"until": "até",
-			"and": "e",
-			"mon": "Seg",
-			"tue": "Ter",
-			"wed": "Qua",
-			"thu": "Qui",
-			"fri": "Sex",
-			"sat": "Sab",
-			"sun": "Dom"
+	"stores": {
+		"Page":{
+			"heading": "Lojas e Rede de Agentes",
+			"subheading":"Disponíveis para os nossos passageiros, os Espaços navegante® Carris Metropolitana estão dedicados a prestar informações sobre a rede e bilhética Carris Metropolitana, possibilitando o esclarecimento de dúvidas, a emissão de cartões navegante® e a adesão a perfis e descontos. É possível também efetuar o carregamento de títulos nos pontos de atendimento PayShop® da rede de agentes navegante®.",
+			"external_link": "Rede de agentes navegante®"
 		},
-		"address": "Morada",
-		"realtime_status": {
-			"is_open": "Aberto Agora",
-			"is_closed": "Fechado / Completo",
+		"StoresList": {
+			"label": "Município"
+		},
+		"StoresListEmpty": {
+			"title": "Nenhuma loja aberta por agora",
+			"subtitle": "Neste momento, todas as lojas aparentam estar encerradas.",
+			"action_1": "Consultar Horários das Lojas",
+			"action_2": "Explorer Rede de Agentes"
+		},
+		"StoresListItem": {
+			"schedules": {
+				"label": "Horário",
+				"from": "De",
+				"until": "até",
+				"and": "e",
+				"mon": "Seg",
+				"tue": "Ter",
+				"wed": "Qua",
+				"thu": "Qui",
+				"fri": "Sex",
+				"sat": "Sab",
+				"sun": "Dom"
+			},
+			"address": "Morada",
+			"get_directions": "Obter Direções"
+		},
+		"StoresListItemRealtime": {
+			"current_status": {
+				"open": "Aberto Agora",
+				"busy": "Movimentado",
+				"closed": "Fechado / Completo",
+				"unknown": "Em Atualização"
+			},
 			"people_waiting": "{count, plural, =0 {Ninguém em espera} =1 {1 cliente em espera} other {# clientes em espera}}",
 			"desks_open": "{count, plural, =0 {Nenhum posto aberto} =1 {1 posto aberto} other {# postos abertos}}",
 			"expected_wait_time": "{count, plural, =0 {Atendimento imediato} =1 {Atendimento em aprox. 1 min} other {Atendimento em aprox. # min}}"
+		},
+		"Toolbar": {
+			"by_current_status": {
+				"open": "Abertas agora ({count})",
+				"all": "Todas as lojas"
+			}
+			,
+			"by_municipality": {
+				"label": "Município"
+			},
+			"found_items_counter": "{count, plural, =0 {Nenhuma loja encontrada} one {Encontrada # loja:} other {Encontradas # lojas:}}"
 		}
-	},
-	"StoresStoreItemRealtime": {
-		"is_open": "Aberto Agora",
-		"is_busy": "Movimentado",
-		"is_closed": "Fechado / Completo",
-		"people_waiting": "{count, plural, =0 {Ninguém em espera} =1 {1 cliente em espera} other {# clientes em espera}}",
-		"desks_open": "{count, plural, =0 {Nenhum posto aberto} =1 {1 posto aberto} other {# postos abertos}}",
-		"expected_wait_time": "{count, plural, =0 {Atendimento imediato} =1 {Atendimento em aprox. 1 min} other {Atendimento em aprox. # min}}"
 	},
 	"HomeMetricsSection": {
 		"heading": "Dados em Tempo Real"
@@ -187,34 +203,36 @@
 			"contacts":"Contactos"
 		}
 	},
-	"LostAndFoundPage": {
-		"heading": "Perdidos e Achados",
-		"subheading": "O serviço de transporte da Carris Metropolitana é assegurado por 4 prestadores de serviço, cada um explorando a sua zona da Área Metropolitana de Lisboa, conforme a imagem seguinte. Por esta razão, a melhor forma de reaver o seu objeto é contactar o operador da área utilizada.",
-		"operator_sections": {
-			"41": {
-				"title": "Área 1 | Viação Alvorada",
-				"description": "Envie um email para passageiro@viacaoalvorada.pt com informação da linha utilizada, hora e descrição do objecto. Se possível, inclua o número ou matrícula do veículo."
-			},
-			"42": {
-				"title": "Área 2 | Rodoviária de Lisboa",
-				"description": "Preencha o Formulário Online disponibilizado no site do operador com informação da linha utilizada, hora e descrição do objeto. Se possível, inclua o número ou matrícula do veículo."
-			},
-			"43": {
-				"title": "Área 3 | TST",
-				"description": "Preencha o Formulário Online disponibilizado no site do operador com informação da linha utilizada, hora e descrição do objeto. Se possível, inclua o número ou matrícula do veículo."
-			},
-			"44": {
-				"title": "Área 4 | Alsa Todi",
-				"description": "Preencha o Formulário Online disponibilizado no site do operador ou envie email para passageiros@alsa.pt com informação da linha utilizada, hora e descrição do objeto. Se possível, inclua o número ou matrícula do veículo."
+	"lost-and-found": {
+		"Page": {
+			"heading": "Perdidos e Achados",
+			"subheading": "O serviço de transporte da Carris Metropolitana é assegurado por 4 prestadores de serviço, cada um explorando a sua zona da Área Metropolitana de Lisboa, conforme a imagem seguinte. Por esta razão, a melhor forma de reaver o seu objeto é contactar o operador da área utilizada.",
+			"operator_sections": {
+				"41": {
+					"title": "Área 1 | Viação Alvorada",
+					"description": "Envie um email para passageiro@viacaoalvorada.pt com informação da linha utilizada, hora e descrição do objecto. Se possível, inclua o número ou matrícula do veículo."
+				},
+				"42": {
+					"title": "Área 2 | Rodoviária de Lisboa",
+					"description": "Preencha o Formulário Online disponibilizado no site do operador com informação da linha utilizada, hora e descrição do objeto. Se possível, inclua o número ou matrícula do veículo."
+				},
+				"43": {
+					"title": "Área 3 | TST",
+					"description": "Preencha o Formulário Online disponibilizado no site do operador com informação da linha utilizada, hora e descrição do objeto. Se possível, inclua o número ou matrícula do veículo."
+				},
+				"44": {
+					"title": "Área 4 | Alsa Todi",
+					"description": "Preencha o Formulário Online disponibilizado no site do operador ou envie email para passageiros@alsa.pt com informação da linha utilizada, hora e descrição do objeto. Se possível, inclua o número ou matrícula do veículo."
+				}
 			}
-		}
-	},
-	"LostAndFoundOperatorSection": {
-		"email": {
-			"label": "Enviar Email"
 		},
-		"form": {
-			"label": "Preencher Formulário"
+		"OperatorSection": {
+			"email": {
+				"label": "Enviar Email"
+			},
+			"form": {
+				"label": "Preencher Formulário"
+			}
 		}
 	},
 	"NewsCard": {
