--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -35,7 +35,8 @@
 			"subheading":"Fique a par de todas as alterações à rede. Lorem ipsum dolor sit amet."
 		},
 		"AlertsList":{
-			"group_labels": {
+			"label": "{count, plural, one {Alerta ativo} other {Alertas ativos}}",
+			"titles": {
 				"future": "A partir de {value, date, dayShort} {value, date, monthLong} {value, date, yearLong}",
 				"tomorrow": "A partir de amanhã, {value, date, dayShort} {value, date, monthLong} {value, date, yearLong}",
 				"today": "A partir de hoje, {value, date, dayShort} {value, date, monthLong} {value, date, yearLong}",
