--- a/frontend/translations/pt-PT.json
+++ b/frontend/translations/pt-PT.json
@@ -119,7 +119,7 @@
 		}
 	},
 	"HomeMetricsSection": {
-		"heading": "Dados em Tempo Real"
+		"heading": "A nossa operação ao vivo"
 	},
 	"HomeMetricsSectionDemand": {
 		"today": {
